...
                    Picker("Primary Attribute", selection: $filterMode.attribute) {
                        Text("Any").tag(Optional<Hero.Attribute>.none)
                        ForEach(Hero.Attribute.allCases) { attribute in
                            Text(attribute.localizedName).tag(Optional(attribute))
                        }
                    }
                    .accessibilityIdentifier("PrimaryAttributeButton")
                    .pickerStyle(.menu)

                    Section {
                        HStack {
                            Text("Attack Type")
                            Spacer()
...
